# Merlin-My-Pai

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.en.md  README.md  TODO.md  ansible.cfg  local.yml.example  pai.md  pyproject.toml  sync.py  workspace
.claude/: settings.json
.claude/skills/mcp-tools/: SKILL.md
.github/workflows/: deploy.yml
ansible/: ansible.cfg  pyproject.toml
ansible/inventory/: hosts.yml  hosts.yml.example
ansible/playbooks/: clean-logs.yml  deploy-bot.yml  deploy-claude.yml  deploy-fabric.yml  deploy-obsidian.yml  deploy-web.yml  init-user.yml  provision-vultr.yml  setup-claude-auth.yml  setup-obsidian-rag.yml  setup-vps.yml
ansible/playbooks/init/: init-user.yml  provision-vultr.yml  setup-caddy.yml  setup-vps.yml
ansible/playbooks/obsidian/: 01-couchdb.yml  02-livesync-bridge.yml  03-rag.yml
ansible/playbooks/templates/: bot.env.j2  livesync.Caddyfile.j2  pai-bot.service.j2  pai-web.Caddyfile.j2  pai-web.env.j2
ansible/scripts/: ansible-wrapper.sh
docs/: blueprint.md  privacy-policy.md  terms-of-service.md
docs/plans/: 2026-01-27-session-memory-integration.md  2026-01-28-discord-voice-recording.md  2026-01-29-fix-recording-duration-bug.md  2026-01-29-mcp-error-handling.md  2026-02-14-capability-rollout-phase2-implementation.md  2026-02-14-capability-rollout-phase2-report.md  2026-02-14-memory-workspace-boundary-design-implementation.md  2026-03-05-base-url-prefix-design.md  2026-03-06-notify-web-support-design.md
pai-bot/: README.en.md  README.md  ecosystem.config.cjs  package.json  tsconfig.json
pai-bot/scripts/: test-memory.ts  update-trpg-schedule.ts
pai-bot/src/: config.ts  events.ts  index.ts
pai-bot/src/api/: server.ts  websocket.ts
pai-bot/src/claude/: authorization.ts  client.ts  task-executor.ts
pai-bot/src/context/: manager.ts
pai-bot/src/mcp/: server.ts  start.sh
pai-bot/src/memory/: capability-import-boundary.test.ts  capability.test.ts  capability.ts  constants.ts  llm.ts  manager.ts
pai-bot/src/rag/: agentic_rag.py  obsidian_rag.py
pai-bot/src/services/: prompt-store.ts  transcription.ts  workspace-tree.test.ts  workspace-tree.ts
pai-bot/src/storage/: db.ts  init-db.ts  migrate.ts  schema.sql
pai-bot/src/utils/: logger.ts  session.ts  telegram.ts
pai-claude/: .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  settings.json  tsconfig.json
pai-claude/.claude/: settings.json
pai-claude/hooks/: memory-cli.ts  on-post-tool-use.ts  on-session-start.ts  on-stop.ts  on-subagent-stop.ts
pai-claude/hooks/lib/: config.ts  history.ts  notify.ts  (+3 more)
pai-claude/scripts/: heartbeat.sh  on-notification.ts  on-post-tool-use.ts  on-pre-compact.ts  on-session-start.ts  on-stop.ts  on-subagent-stop.ts  pre-tool-use.ts
pai-claude/tests/: memory-cli-capability.test.ts  workspace-boundary.test.ts
pai-claude/tools/: obsidian-delete-sync.sh  obsidian-manual-sync.sh
pai-claude/workspace/: .gitignore  CLAUDE.md  README.md
pai-mcp/: README.md  package.json
pai-mcp/src/: index.ts
pai-web/: .gitignore  README.en.md  README.md  index.html  package.json  vite.config.ts
pai-web/public-root/: index.html
pai-web/src/: App.tsx  main.tsx
scripts/: __init__.py  __main__.py  ansible.py  bot.py  google.py  obsidian_index.py  spotify.py  ssh.py  upload_cookies.py  vault.py  web.py
setup/: __init__.py  __main__.py  config.py  state.py  ui.py
setup/steps/: __init__.py  playbooks.py  variables.py  vault.py
setup/tests/: test_config.py  test_ssh.py
setup/utils/: __init__.py  command.py  ssh.py  yaml.py
(+95 files in other folders)
