[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weihung-pai"
version = "1.20.0"
description = "Personal AI Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=12.3.0",
    "ansible-lint>=25.12.2",
    "python-semantic-release>=9.15.0",
    "pre-commit>=4.0.0",
    "mypy>=1.14.0",
    "types-PyYAML>=6.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
sync = "sync:main"
pai-setup = "setup.__main__:main"
pai = "scripts.__main__:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["setup", "scripts", "sync.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
commit_parser = "conventional"
build_command = """
    uv lock --upgrade-package weihung-pai
    git add uv.lock
"""

[tool.semantic_release.remote]
type = "github"
push = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
mode = "init"

[tool.semantic_release.publish]
upload_to_vcs_release = true
